<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csbarcelona.choremanager.NewTaskActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:id="@+id/horizontalLayout13"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <ImageButton
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="86dp"
                    android:layout_weight="3"
<<<<<<< Updated upstream
                    android:src="@drawable/ic_menu_edit"/>
=======
                    android:src="@drawable/ic_menu_edit"
                    android:scaleType="fitCenter"/>
                    <!--app:srcCompat="@mipmap/ic_launcher_round"  -->
>>>>>>> Stashed changes

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/taskName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/Task_Name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/numChorePoints"
                    android:layout_width="0.5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.49"
                    android:ems="10"
                    android:hint="@string/Task_Point"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/taskPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Points" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/estimatedDuration"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Estimated_Duration"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/duration_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:layout_weight="1"
                    android:entries="@array/duration_array"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout06"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Description"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/VerticalLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/horizontalLayout07"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:text="@string/ASSIGNED_USERS" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout16"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/userGroupSpinner"
                        android:minHeight="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:text="@string/DUE_DATE" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnDueDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showDatePickerDialog"
                        android:text="@string/None" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:text="@string/REPEAT" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <Spinner
                        android:id="@+id/recurring_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="40dp"
                        android:layout_weight="1"
                        android:entries="@array/recurring_array"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:text="@string/RESOURCES" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.csbarcelona.choremanager.MultiSpinner
                        android:id="@+id/resource_multi_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Submit" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
