<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csbarcelona.choremanager.EditTask">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:id="@+id/horizontalLayout13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="86dp"
                    android:layout_weight="3"
                    app:srcCompat="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/editStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Complete"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/Task_Name" />

                <EditText
                    android:id="@+id/editGroup"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Task_Group"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPoints"
                    android:layout_width="0.5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.49"
                    android:ems="10"
                    android:hint="@string/Task_Point"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/taskPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Points" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editDuration"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Estimated_Duration"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/editUnits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/duration_array" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontalLayout06"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Description"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/VerticalLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/horizontalLayout07"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ASSIGNED_USERS" />
                </LinearLayout>

                <GridLayout
                    android:id="@+id/checkBoxGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:orientation="vertical"
                    android:rowCount="2">

                    <CheckBox
                        android:id="@+id/checkBox8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_row="0"
                        android:text="Nancy"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_row="0"
                        android:text="Bill"
                        android:textSize="18sp" />


                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_row="1"
                        android:text="Ryan"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_row="1"
                        android:text="Ally"
                        android:textSize="18sp" />
                </GridLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/DUE_DATE" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/editDueDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showDatePickerDialog"
                        android:text="@string/None" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/REPEAT" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/editRepeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/recurring_array" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/horizontalLayout10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/RESOURCES" />
                </LinearLayout>

                <GridLayout
                    android:id="@+id/checkBoxGrid02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="3"
                    android:orientation="vertical"
                    android:rowCount="2">

                    <CheckBox
                        android:id="@+id/checkBox9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_row="0"
                        android:text="Mop"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_row="0"
                        android:text="Bucket"
                        android:textSize="18sp" />


                    <CheckBox
                        android:id="@+id/checkBox11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_row="1"
                        android:text="Sponge"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_row="1"
                        android:text="Soap"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_columnWeight="1"
                        android:layout_row="1"
                        android:text="Broom"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_columnWeight="1"
                        android:layout_row="0"
                        android:text="Dustpan"
                        android:textSize="18sp" />

                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Update" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Delete" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
