<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csbarcelona.choremanager.MenuActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp">

        <LinearLayout
            android:id="@+id/menuLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Task" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_resources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RESOURCES" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuLayout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuLayout04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Calendar" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/menuLayout05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Help" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
